--- a/index.html
+++ b/index.html
@@ -4,18 +4,21 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Search Engine Optimization</title>
-    <meta name="something" content="">
+    <title>Josh's Webpage</title>
+    <meta name="description" content="a bunch of mumbo jumbo">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/styles.css"/>
+    <link rel="stylesheet" href="style.css"/>
 
 </head>
 
 <body>
     <!-- main content -->
     <div class="main">
-    <h1>Josh's Website</h1>
+    <h1>Joshua Blieden</h1>
+        <hr>
     <p>Information is everywhere and not one piece of information is the same. My focus in life is Informatics and I am currently still studying that field at The State University at Albany. The reason for my focus in Informatics is my fascination with how information is transferred all around the world in a vast amount of ways within seconds. A sub focus of mine is Criminal Justice, more pertaining to cyber crime. I really am astonished how in this generation, so many people are not protecting their information efficiently or even at all. My focus on computers came when I was younger and computers and technology as a whole were getting huge in the world. I started to learn about computers and before I even turned 18 I was researching on how to build custom computers. I loved how these amazing machines worked so well, I thought why not make one for myself. After learning all I could about computers and information without formal school, I decided I would build my own computer. I built it all by myself and it was one of the most gratifying experiences in my life. This not only taught me a lesson in information but also jump started my journey into the field of Informatics as a career.</p>
+    <hr>
+    <p>Goals I had in college since I'm graduating in 3 days.</p>
     <ul>
         <li>Build another computer</li>
         <li>Learn about penetration testing</li>
