--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
         <li>Build another computer</li>
         <li>Learn about penetration testing</li>
         <li>Graduate College!</li>
+        <li>Play video games</li>
+        <li>Finish college with a 3.0+</li>
     </ul>
 
     </div>
